# elektra-back

./: .env  .env.sample  .gitignore  README.md  db.sqlite3  pyproject.toml
apps/cards/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/cards/fixtures/: user.json
apps/cards/migrations/: 0001_initial.py  0002_auto_20240127_0708.py  0003_auto_20240127_0734.py
elektra/: settings.py  urls.py
